[tool.poetry]
name = "Breaker (Shell) Beta"
version = "0.1.0"
description = "Breaker (Shell) Beta test"
authors = ["AzzyOfficial <azzynchara@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
sly = "^0.4"
ply = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"